[gd_scene load_steps=7 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Board.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Tableau.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/WastePile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graphics/cardBack_blue5.png" type="Texture" id=6]

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.388235, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Deck" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Tableau1" parent="." instance=ExtResource( 4 )]
position = Vector2( 40, 200 )

[node name="Tableau2" parent="." instance=ExtResource( 4 )]
position = Vector2( 180, 200 )

[node name="Tableau3" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 200 )

[node name="Tableau4" parent="." instance=ExtResource( 4 )]
position = Vector2( 460, 200 )

[node name="Tableau5" parent="." instance=ExtResource( 4 )]
position = Vector2( 600, 200 )

[node name="Tableau6" parent="." instance=ExtResource( 4 )]
position = Vector2( 740, 200 )

[node name="Tableau7" parent="." instance=ExtResource( 4 )]
position = Vector2( 880, 200 )

[node name="WastePile" parent="." instance=ExtResource( 5 )]
position = Vector2( 180, 20 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 210.0
rect_min_size = Vector2( 140, 190 )
rect_scale = Vector2( 0.75, 0.75 )
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
[connection signal="top_card_clicked" from="Deck" to="." method="_on_Deck_top_card_clicked"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
